Fix ChromeBrowserMainBrowserTest.VariationsServiceStartsRequestOnNetworkChange on ChromeOS with network service

VariationsServiceStartsRequestOnNetworkChange usually fails on ChromeOS
with the network service enabled because of timing issues with between
the test's setup, and setting up the initial connection type. The test
tries to set the connection to NONE early in the setup stage, and then
set it to WIFI and check that the variations service makes a request.
However, it's possible for the ChromeOS setup code to set the connection
type to ETHERNET before the test starts, so the variations service will
send the request too soon. Rather than fixing that issue, I modified
the test to let setup happen as normal, and then tell the variations
service to pretend that it hadn't sent a request yet. This makes the
test work regardless of what happens before it.

Bug: 919108
Change-Id: Ie51295162c04e1aba358037d0c599ff47775c1ab
Reviewed-on: https://chromium-review.googlesource.com/c/1423717
Commit-Queue: Robbie McElrath <rmcelrath@chromium.org>
Reviewed-by: Jesse Doherty <jwd@chromium.org>
Reviewed-by: Robbie McElrath <rmcelrath@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#628045}
Former-commit-id: 8fd3846e4131416c850983a35144889f08ba05f1